--- a/programs/solana-bnpl/Cargo.toml
+++ b/programs/solana-bnpl/Cargo.toml
@@ -16,5 +16,5 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.30.0"
+anchor-lang = {version = "0.30.0",features = ["init-if-needed"]}
 anchor-spl = "0.30.0"
